config/victim.yml
apiVersion: v1
kind: Pod
metadata:
  generateName: victim-
  labels:
    group: rkalyana-public
    app: arpspoof-victim
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - {key: app, operator: In, values: [arpspoof-hacker]}
        topologyKey: kubernetes.io/hostname
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - {key: app, operator: In, values: [arpspoof-victim]}
        topologyKey: kubernetes.io/hostname
  containers:
  - name: victim
    image: rkalyana/ubuntu-xfce-vnc
    ports:
    - containerPort: 6901
    - containerPort: 5901
