config/service-server.yml
kind: Service
apiVersion: v1
metadata:
  generateName: service-server-
  labels:
    group: rkalyana-public
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  selector:
    app: arpspoof-server
